cmake_minimum_required(VERSION 3.16)
project(corte3_ent1_dsps LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(leetcode_1396_underground leetcode_1396_underground/main.cpp)
add_executable(leetcode_2241_atm leetcode_2241_atm/main.cpp)
add_executable(leetcode_3815_auction leetcode_3815_auction/main.cpp)
add_executable(exercism_meetup exercism_meetup/main.cpp)
add_executable(exercism_clock exercism_clock/main.cpp)
